--- a/catalogue.html
+++ b/catalogue.html
@@ -6,36 +6,36 @@
 	<link rel="stylesheet" type="text/css" href="catalogue.css">
 		<title>Catalogue</title> 
 	</head>
+
+<body>
 <div class="head"></div>
-<br>
-<br>
-<br>
-<br>
-<br>
-
 <h1><center>Catalogue</center> </h1>
-
-<base target = _self>
-<center> <a href="http://cgi.cs.mcgill.ca/~nboukh4/">Home</a>
- <a href="http:/.cgi.cs.mcgill.c/~dandri2/home_stuff.html">Catalogue</a>
- <a href="http:/.cgi.cs.mcgill.c/~dandri2/home_stuff.html">Login</a></center>
+<div id="nav">
+ <a href="http://cgi.cs.mcgill.ca/~nboukh4/">Home |</a>
+ <a href="http:/.cgi.cs.mcgill.c/~dandri2/home_stuff.html">Catalogue |</a>
+ <a href="http:/.cgi.cs.mcgill.c/~dandri2/home_stuff.html">Login |</a>
+</div>
 <br>
 <br>
-
+<div class="table">
 	<table border="0">
 	<tr>
-	<th>Lollipop</th>
-	<th>Another Heading</th>
+	<td width:"200"; height:"200"><img src="lollipop-3.jpg" alt=Lollipop width="200" height="200"</td>
+	<th>This will be test best Lollipop you will ever have, order now!</th>
 	</tr>
 	<tr>
-	<td width:"30"; height:"30"><img src="lollipop-3.jpg" alt=Lollipop width"30" height="30"</td>
-	<td>row 1, cell 2</td>
+	<th><form action="">
+		<input type="checkbox" name ="Buy" value="candy">Quantity <input type="number" name="Quantity"> </th>
 	</tr>
 	<tr>
-	<td>row 2, cell 1</td>
-	<td>row 2, cell 2</td>
+	<td width:"200"; height:"200"><img src="mAndm.jpg" alt= m&m width="200" height="200"</td>
+	<th> m&m's a classic!! </th>
 	</tr>
-	</table>
+	<th><form action="">
+                <input type="checkbox" name ="Buy" value="candy">Quantity <input type="number" name="Quantity"> </th>
+        </tr>
 
+	</table>
+</div>
 </body>
 </html> 
