--- a/catalogue.html
+++ b/catalogue.html
@@ -11,30 +11,47 @@
 <div class="head"></div>
 <h1><center>Catalogue</center> </h1>
 <div id="nav">
- <a href="http://cgi.cs.mcgill.ca/~nboukh4/">Home |</a>
+ <center><a href="http://cgi.cs.mcgill.ca/~nboukh4/">Home |</a>
  <a href="http:/.cgi.cs.mcgill.c/~dandri2/home_stuff.html">Catalogue |</a>
- <a href="http:/.cgi.cs.mcgill.c/~dandri2/home_stuff.html">Login |</a>
+ <a href="http:/.cgi.cs.mcgill.c/~dandri2/home_stuff.html">Login |</a> </center>
 </div>
 <br>
 <br>
 <div class="table">
-	<table border="0">
-	<tr>
-	<td width:"200"; height:"200"><img src="lollipop-3.jpg" alt=Lollipop width="200" height="200"</td>
-	<th>This will be test best Lollipop you will ever have, order now!</th>
-	</tr>
-	<tr>
+	<table border="1">
+	
+	<tr> 
+	<th>Lollipop</th>
 	<th><form action="">
-		<input type="checkbox" name ="Buy" value="candy">Quantity <input type="number" name="Quantity"> </th>
-	</tr>
+                <input type="checkbox" name ="Lolli" value="candy">Quantity <input type="number" name="Quantity"> </th>
+         </tr>
+	
 	<tr>
-	<td width:"200"; height:"200"><img src="mAndm.jpg" alt= m&m width="200" height="200"</td>
-	<th> m&m's a classic!! </th>
+	<td width:"200"; height:"200"><img src="chupa.jpg" alt=Lollipop width="200" height="200"</td>
+	<td>Chupa Chups</td>
 	</tr>
-	<th><form action="">
-                <input type="checkbox" name ="Buy" value="candy">Quantity <input type="number" name="Quantity"> </th>
+	
+	<tr>
+	<th> M&M's</th>
+        <th> <input type="checkbox" name ="M&M" value="candy">Quantity <input type="number" name="Quantity"> </th>
         </tr>
 
+
+	
+	<tr>
+	<td width:"200"; height:"200"><img src="mAndm.jpg" alt= m&m width="200" height="200"</td>
+	<td> m&m's a classic!! </td>
+	</tr>
+	
+	<tr>
+	<th> Reese Chocolate </th>
+	<th> <input type="checkbox" name ="Reese" value="candy">Quantity <input type="number" name="Quantity"> </th>
+        </tr>
+		
+	<tr>
+	<td width:"200"; height: "200"><img src="reese.jpg" name=Reese width="200" height="200"</td>
+	<th> Reese Chocolate with peanut butter <th> 
+	</tr>
 	</table>
 </div>
 </body>
