--- a/catalogue.html
+++ b/catalogue.html
@@ -14,45 +14,60 @@
  <center><a href="http://cgi.cs.mcgill.ca/~nboukh4/">Home |</a>
  <a href="http:/.cgi.cs.mcgill.c/~dandri2/home_stuff.html">Catalogue |</a>
  <a href="http:/.cgi.cs.mcgill.c/~dandri2/home_stuff.html">Login |</a> </center>
+<hr>
 </div>
 <br>
 <br>
 <div class="table">
-	<table border="1">
+	<table border="0">
 	
 	<tr> 
-	<th>Lollipop</th>
-	<th><form action="">
-                <input type="checkbox" name ="Lolli" value="candy">Quantity <input type="number" name="Quantity"> </th>
-         </tr>
+	<th>Lollipop</th>            
+        </tr>
 	
 	<tr>
-	<td width:"200"; height:"200"><img src="chupa.jpg" alt=Lollipop width="200" height="200"</td>
-	<td>Chupa Chups</td>
+	<td><img src="./pic_temp/chupa.jpg" alt=Lollipop width="200" height="200"</td>
+	<td> The most popular brand of lollipops the ChupaChups.<br> Get It Now! Cheapest on the market!
+	<br>
+	<br>
+	<br>
+	Price: 5000$
+	 <input type="checkbox" name ="Lolli" value="candy">Quantity <input type="number" name="Quantity"> </th>
+	</td>
 	</tr>
 	
 	<tr>
 	<th> M&M's</th>
-        <th> <input type="checkbox" name ="M&M" value="candy">Quantity <input type="number" name="Quantity"> </th>
-        </tr>
-
-
-	
+        </tr>	
 	<tr>
-	<td width:"200"; height:"200"><img src="mAndm.jpg" alt= m&m width="200" height="200"</td>
-	<td> m&m's a classic!! </td>
-	</tr>
+	<td><img src="./pic_temp/mAndm.jpg" alt= m&m width="200" height="200"</td>
+	<td> M&M's pack of 200g, CandyCrash best seller!<br>People's favorite colorful button-shapped candies! 
+	<br>
+	<br>
+	<br>
+	Price: 10000$
+	<input type="checkbox" name ="M&M" value="candy">Quantity <input type="number" name="Quantity">
+	</td>
+		</tr>
 	
 	<tr>
 	<th> Reese Chocolate </th>
-	<th> <input type="checkbox" name ="Reese" value="candy">Quantity <input type="number" name="Quantity"> </th>
         </tr>
-		
 	<tr>
-	<td width:"200"; height: "200"><img src="reese.jpg" name=Reese width="200" height="200"</td>
-	<th> Reese Chocolate with peanut butter <th> 
+	<td width:"200"; height: "150"><img src="./pic_temp/reese.jpg" name=Reese width="200" height="200"</td>
+	<td> Reese Chocolate with peanut butter. Two in a Pack
+	<br>
+	<br>
+	<br>
+	Price: 200$
+	<input type="checkbox" name ="Reese" value="candy">Quantity <input type="number" name="Quantity">	
+	</td> 
 	</tr>
 	</table>
+	<br>
+	<input type="submit" value="Submit">
+	</form>
+
 </div>
 </body>
 </html> 
