Organization of folder

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 <br>
 <br>
 <font color="black"><center>Our store sells candies of all sorts. You can order as many as you like! The more the merrier!</center></font>
-<img src="candy8.jpg" height="100%" width="100%">
+<img src="./resources/candy8.jpg" height="100%" width="100%">
 </body>
 </html>
