--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 <div class="head"></div>
 <h1><center>Welcome to the CandyCrash Store!</center></h1>
-<center> <a href="http://cgi.cs.mcgill.ca/~nboukh5/index.html">Home |</a>
-<a href="http://cgi.cs.mcgill.ca/~dandri2/catalogue.html">Catalogue |</a>
-<a href="http://cgi.cs.mcgill.ca/~dandri2/login.html" target="_blank">Login</a></center> 
+<center> <a href="http://cgi.cs.mcgill.ca/~tyi/index.html">Home |</a>
+<a href="http://cgi.cs.mcgill.ca/~tyi/catalogue.html">Catalogue |</a>
+<a href="http://cgi.cs.mcgill.ca/~tyi/login.html" target="_blank">Login</a></center> 
 <br>
 <br>
 <font color="black"><center>Our store sells candies of all sorts. You can order as many as you like! The more the merrier!</center></font>
