done with login and registration

--- a/catalogue.html
+++ b/catalogue.html
@@ -4,6 +4,7 @@
 
 	<head>
 	<link rel="stylesheet" type="text/css" href="catalogue.css">
+	<link href='http://fonts.googleapis.com/css?family=Mystery+Quest|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 		<title>Catalogue</title> 
 	</head>
 
@@ -18,6 +19,7 @@
 </div>
 <br>
 <br>
+<form>
 <div class="table">
 	<table border="0">
 	
