--- a/login.html
+++ b/login.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="login.css">
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 	<title>CandyCrash Login</title>
 	</head>
 
 <body>
-	
+	<div id='home'>
+		<a href ='http://cgi.cs.mcgill.ca/~dandri2/index.html'> Home </a>
+	</div>
 	<h1> Login </h1>
 	<form>	
 	Username:<br>
@@ -17,8 +19,11 @@
 	<input type="password" name="password">
 	<br>
 	<input type="submit" value="submit">
+	<br>
 	</form>
-
+	<div id='user'>
+	<a href='http://cgi.cs.mcgill.ca/~dandri2/registration.html'>New User?</a>
+	</div>
 	
 	
 	
