--- a/registration.html
+++ b/registration.html
@@ -2,13 +2,15 @@
 <html>
 	<head>
 	<link rel="stylesheet" type="text/css" href="registration.css">
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 	<title> CandyCrash Registration</title>
 	</head>
 
+	<body>	
+		<div id='home'>
+		<a href ='http://cgi.cs.mcgill.ca/~dandri2/index.html'> Home </a>
+		</div>
 	<h1>Sign Up</h1>
-
-	<body>
 	<br>
 	<br>	
 	<form action=“./cgi-bin/test.pl” method=“post”>
