--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <html>
 	<head>
 	<link rel="stylesheet" type="text/css" href="c.css">
+	<link href='http://fonts.googleapis.com/css?family=Mystery+Quest|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 		<title>HomePage</title>
 	</head>
 <body>
 <div class="head"></div>
 <h1><center>Welcome to the CandyCrash Store!</center></h1>
+<div id="nav">
 <center> <a href="http://cgi.cs.mcgill.ca/~tyi/index.html">Home |</a>
 <a href="http://cgi.cs.mcgill.ca/~tyi/catalogue.html">Catalogue |</a>
 <a href="http://cgi.cs.mcgill.ca/~tyi/login.html" target="_blank">Login</a></center> 
-<br>
+</div>
+<hr>
 <br>
 <font color="black"><center>Our store sells candies of all sorts. You can order as many as you like! The more the merrier!</center></font>
 <img src="./resources/candy8.jpg" height="100%" width="100%">
