--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div id='home'>
-		<a href ='http://cgi.cs.mcgill.ca/~dandri2/index.html'> Home </a>
+		<a href ='http://cgi.cs.mcgill.ca/~tyi/index.html'> Home </a>
 	</div>
 	<h1> Login </h1>
 	<form>	
@@ -22,7 +22,7 @@
 	<br>
 	</form>
 	<div id='user'>
-	<a href='http://cgi.cs.mcgill.ca/~dandri2/registration.html'>New User?</a>
+	<a href='http://cgi.cs.mcgill.ca/~tyi/registration.html'>New User?</a>
 	</div>
 	
 	
