--- a/registration.html
+++ b/registration.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<link rel="stylesheet" type="text/css" href="registration.css">
+	<link rel="stylesheet" type="text/css" href="./css/registration.css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 	<title> CandyCrash Registration</title>
 	</head>
@@ -13,7 +13,7 @@
 	<h1>Sign Up</h1>
 	<br>
 	<br>	
-	<form action=“./cgi-bin/test.pl” method=“post”>
+	<form action="./register.pl" method="post">
 	<table height:"300">
 	<tr>
 	<td>
