--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-	<link rel="stylesheet" type="text/css" href="c.css">
+	<link rel="stylesheet" type="text/css" href="./css/index.css">
 	<link href='http://fonts.googleapis.com/css?family=Mystery+Quest|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 		<title>HomePage</title>
 	</head>
@@ -17,6 +17,6 @@
 <hr>
 <br>
 <font color="black"><center>Our store sells candies of all sorts. You can order as many as you like! The more the merrier!</center></font>
-<img src="./resources/candy8.jpg" height="100%" width="100%">
+<img src="./css/resources/candy8.jpg" height="100%" width="100%">
 </body>
 </html>
