--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="login.css">
+	<link rel="stylesheet" type="text/css" href="./css/login.css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 	<title>CandyCrash Login</title>
 	</head>
@@ -11,7 +11,7 @@
 		<a href ='http://cgi.cs.mcgill.ca/~tyi/index.html'> Home </a>
 	</div>
 	<h1> Login </h1>
-	<form>	
+	<form action="./login.cgi" method="post">	
 	Username:<br>
 	<input type="text" name="username">
 	<br>
