--- a/catalogue.html
+++ b/catalogue.html
@@ -14,12 +14,12 @@
 <div id="nav">
  <center><a href="http://cgi.cs.mcgill.ca/~tyi/">Home |</a>
  <a href="http://cgi.cs.mcgill.ca/~tyi/catalogue.html">Catalogue |</a>
- <a href="http://cgi.cs.mcgill.ca/~tyi/login.html">Login |</a> </center>
+ <a href="http://cgi.cs.mcgill.ca/~tyi/login.html" target="_blank">Login |</a> </center>
 <hr>
 </div>
 <br>
 <br>
-<form>
+<form action="./cgi-bin/purchase.py" method="get">
 <input type="hidden" name="hiddenUser" value="">
 <div class="table">
 	<table border="0">
