--- a/login.html
+++ b/login.html
@@ -8,7 +8,9 @@
 
 <body>
 	<div id='home'>
-		<a href ='http://cgi.cs.mcgill.ca/~tyi/index.html'> Home </a>
+		<a href="http://cgi.cs.mcgill.ca/~tyi/">Home |</a>
+ 		<a href="http://cgi.cs.mcgill.ca/~tyi/catalogue.html">Catalogue |</a>
+ 		<a href="http://cgi.cs.mcgill.ca/~tyi/login.html">Login </a> 
 	</div>
 	<h1> Login </h1>
 	<form action="./login.cgi" method="post">	
