--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
 </div>
 <hr>
 <br>
-<font color="black"><center>Our store sells candies of all sorts. You can order as many as you like! The more the merrier!</center></font>
-<img src="./css/resources/candy8.jpg" height="100%" width="100%">
+<font color="black"><center>Welcome to our wonderful store of CandyCrash. Yes we sell candies! 
+	<br> Our store sells a grand selection of 3 candies. Limited quantities and supplies apply. 
+	<br>So get your candies today, while you can! No we are not affiliated to CandyCrush.
+	<br><br>
+	<hr>
+	"Best candy EVAAAAA!!!111!!" -Bob(The Candy Authority)
+	<br>"A most excellent and exquisite selection of candy" -Archimedes(Supreme Candy Leader)
+</center></font>
+<img src="./resources/candy8.jpg" height="100%" width="100%">
 </body>
 </html>
